--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -49,3 +49,15 @@ footer a{
      margin-bottom: 4rem;
      color: var(--color-bg);
 }
+
+/*  Media Queries (Small Devices) */
+ 
+@media screen and (max-width: 600px){
+    .permalinks{
+        flex-direction: column;
+        gap: 1.5rem;
+    }
+    .footer__socials{
+        margin-bottom: 2.6rem; 
+    }
+} 
