--- a/src/components/testimonials/testimonials.css
+++ b/src/components/testimonials/testimonials.css
@@ -1,12 +1,13 @@
 .container.testimonial__container{
     width: 40%;
     padding-bottom: 4rem ;
+    margin-top: 2rem;
 }
 .client__avatar{
     width: 4rem;
     aspect-ratio: 1/1;
     overflow: hidden;
-    border-radius: 50%;
+    border-radius: 40%;
     margin: 0 auto 1rem;
     border: 0.4rem solid var(--color-primary-variant);
 }
@@ -19,12 +20,13 @@
 }
 
 .client__review{
-    color: var(--color-light);
-    font-weight: 300;
+    color: var(--color-primary);
+    font-weight: 400;
     display: block; 
     width: 80%;
     margin: 0.8rem auto 0;
 }
+
 
 
 @media screen and (max-width: 1024px){
